# ytspot_downloader

./: .env.example  .gitignore  AGENTS.md  AUDIT_ACTION_MAP.md  AUDIT_COVERAGE_MANIFEST.md  AUDIT_FINAL_REPORT_HEBREW.md  AUDIT_RELEASE_BLOCKERS.md  AUDIT_SYMBOL_GRAPH.md  AUDIT_UNUSED_OR_DEAD_CODE.md  MIGRATION_GUIDE_module_consolidation.py  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  SPOTIFY_PROXY_API.md  THIRD_PARTY_NOTICES.md  cli.py  config.py  config_migrate.py  config_patch.py  downloader.py  error_handler.py  error_handler_patch.py  install_playwright.bat  main.py  out.txt  playlist_parser.py  pyproject.toml  requirements.txt  spotify_response.html  test_integration.py  test_yt.py  user_guide_hebrew.md  version.py
.claude/: settings.local.json
core/: batch_importer.py  channel_tab_discoverer.py  cookie_wizard.py  download_orchestrator.py  downloader.py  duplicate_checker.py  duplicate_detector.py  history_db.py  history_db_resilience_patch.py  hls_downloader.py  listing_scraper.py  lyrics_embedder.py  metadata_models.py  metadata_processor.py  musicbrainz_enricher.py  offline_monitor.py  parallel_enricher.py  playlist_parser.py  playlist_sync.py  progress_estimator.py  queue_persistence.py  replay_gain.py  retry_policy.py  scraper.py  search_engine.py  services.py  spotify_match_scorer.py  thumbnail_cropper.py  universal_extractor.py  update_checker.py
packaging/: generate_icon.py  generate_version_info.py  ytspot.icns  ytspot.iss  ytspot.spec
scratch/: debug_headless.py  debug_headless_full.py  repaired_scraper_fn.txt  test_playlist_thumbs.py  (+2 more)
(+82 files in other folders)
