[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytspot-downloader"
version = "0.1.0"
description = "Desktop downloader for YouTube, YouTube Music, and Spotify — with GUI and CLI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["youtube", "spotify", "downloader", "music", "yt-dlp"]

dependencies = [
    "yt-dlp[default]>=2026.3.13",
    "yt-dlp-ejs",
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.2.1",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.1",
    "mutagen>=1.47.0",
    "syncedlyrics>=0.4.0",
    "PySide6>=6.8.0",
    "PySide6-Fluent-Widgets>=1.11.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "ytmusicapi>=1.7.0",
    "Pillow>=10.3.0",
    "python-dotenv>=1.0.1",
    "certifi>=2025.1.1",
    "keyboard>=0.13.5",
    "playwright>=1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
ytspot = "main:main"
ytspot-cli = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
